pages/docs/reference/typescript/v4/functions/step-send-event.mdx
import { Info, Callout, Properties, Property, Row, Col, CodeGroup, VersionBadge } from "src/shared/Docs/mdx";


export const metaTitle = "step.sendEvent() | Send Events from a Step (SDK v4)"
export const description = "Send events from inside a function step using step.sendEvent() in TypeScript SDK v4. Events are sent atomically as part of the step lifecycle."

# Send Event


Use to send event(s) reliably within your function. Use this instead of [`inngest.send()`](/docs/reference/typescript/v4/events/send) to ensure reliable event delivery from within functions. This is especially useful when [creating functions that fan-out](/docs/guides/fan-out-jobs).

```ts
export default inngest.createFunction(
  {
    id: "user-onboarding",
    triggers: { event: "app/user.signup" },
  },
  async ({ event, step }) => {
    // Do something
    await step.sendEvent("send-activation-event", {
      name: "app/user.activated",
      data: { userId: event.data.userId },
    });
    // Do something else
  }
);
```

To send events from outside of the context of a function, use [`inngest.send()`](/docs/reference/typescript/v4/events/send).

<Callout>
  Use [`eventType().create()`](/docs/reference/typescript/v4/functions/triggers#with-inngestsend-and-stepsendevent) to build fully typed event payloads for `step.sendEvent()`.
</Callout>

---

## `step.sendEvent(id, eventPayload | eventPayload[]): Promise<{ ids: string[] }>`

<Row>
  <Col>
    <Properties>
      <Property name="id" type="string" required>
        The ID of the step. This will be what appears in your function's logs and is used to memoize step state across function versions.
      </Property>
      <Property name="eventPayload" type="object | object[]" required>
        An event payload object or an array of event payload objects.

        [See the documentation for `inngest.send()`](/docs/reference/typescript/v4/events/send#inngest-send-event-payload-event-payload-promise) for the event payload format.

        Events sent from within a run inherit the run's [sessions](/docs/features/events-triggers/sessions?ref=docs-reference-step-send-event). Use `meta.sessions` on the payload to add or override them.
      </Property>
    </Properties>
  </Col>
  <Col>
  ```ts
  // Send a single event
  await step.sendEvent("send-activation-event", {
    name: "app/user.activated",
    data: { userId: "01H08SEAXBJFJNGTTZ5TAWB0BD" },
  });

  // Send an array of events
  await step.sendEvent("send-invoice-events", [
    {
      name: "app/invoice.created",
      data: { invoiceId: "645e9e024befa68763f5b500" },
    },
    {
      name: "app/invoice.created",
      data: { invoiceId: "645e9e08f29fb563c972b1f7" },
    },
  ]);

  ```
  </Col>
</Row>

<Callout>
  `step.sendEvent()` must be called using `await` or some other Promise handler to ensure your function sleeps correctly.
</Callout>

### Return values

The function returns a promise that resolves to an object with an array of Event IDs that were sent. These events can be used to look up the event in the Inngest dashboard or via [the REST API](https://api-docs.inngest.com/v1/events/GetEvent).

```ts
const { ids } = await step.sendEvent("send-invoices", [
  {
    name: "app/invoice.created",
    data: { invoiceId: "645e9e024befa68763f5b500" }
  },
  {
    name: "app/invoice.created",
    data: { invoiceId: "645e9e08f29fb563c972b1f7" }
  },
]);
/**
 * ids = [
 *   "01HQ8PTAESBZPBDS8JTRZZYY3S",
 *   "01HQ8PTFYYKDH1CP3C6PSTBZN5"
 * ]
 */
```
